[gd_scene load_steps=7 format=3 uid="uid://cb8vqv6l8psj8"]

[ext_resource type="Script" path="res://RESOURCES/MAIN/Main_SCRIPT.gd" id="1_x4mmc"]
[ext_resource type="Theme" uid="uid://dm2ug4t4xvo6c" path="res://RESOURCES/Scenes/UI/Juicy_THEME.tres" id="2_0eg1q"]
[ext_resource type="PackedScene" uid="uid://sxdcx0oleo14" path="res://RESOURCES/Scenes/UI/Buttons/Goo_Button_SCENE.tscn" id="3_eb66t"]
[ext_resource type="Texture2D" uid="uid://irpxtcvjo2ji" path="res://RESOURCES/Scenes/UI/Textures/Line_Mode_SPRITE.png" id="4_udib4"]
[ext_resource type="StyleBox" uid="uid://cba3uo186hfxt" path="res://RESOURCES/Scenes/UI/Textures/Button_STYLEBOX.tres" id="5_ollqe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6g1up"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
corner_radius_top_left = 15
corner_radius_bottom_left = 15

[node name="Main" type="Node2D"]
script = ExtResource("1_x4mmc")

[node name="Items" type="Node2D" parent="."]
z_index = -1

[node name="Control_LAYER" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Control_LAYER"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0eg1q")

[node name="Ball_PANEL" type="Panel" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = -182.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="Scroll_CONTAINER" type="ScrollContainer" parent="Control_LAYER/Control/Ball_PANEL"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.999
offset_left = 6.0
offset_top = 6.0
offset_right = 4.77795
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6g1up")

[node name="H_Box_CONTAINER" type="HBoxContainer" parent="Control_LAYER/Control/Ball_PANEL/Scroll_CONTAINER"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Info_PANEL" type="Panel" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -182.0
grow_horizontal = 0
grow_vertical = 2

[node name="V_Box_CONTAINER" type="VBoxContainer" parent="Control_LAYER/Control/Info_PANEL"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -182.0
offset_top = 70.0
offset_right = -35.0
grow_horizontal = 0
grow_vertical = 2

[node name="Save_BUTTON" type="Button" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.00104
anchor_top = 1.0
anchor_right = 1.00104
anchor_bottom = 1.0
offset_left = -85.9999
offset_top = -70.0
offset_right = -19.9999
offset_bottom = -20.0
tooltip_text = "Save the level to the same path it was opened at"
focus_mode = 1
text = "SAVE"
metadata/_edit_use_anchors_ = true

[node name="Load_BUTTON" type="Button" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -70.0
offset_right = -96.0
offset_bottom = -20.0002
tooltip_text = "Load a different project"
focus_mode = 1
text = "LOAD"
metadata/_edit_use_anchors_ = true

[node name="Tool_PANEL" type="Panel" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 70.0
offset_right = 100.0
grow_vertical = 2

[node name="Line_BUTTON" parent="Control_LAYER/Control/Tool_PANEL" instance=ExtResource("3_eb66t")]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.148
anchor_right = 0.0
anchor_bottom = -0.148
offset_left = 20.0
offset_top = 84.56
offset_right = 80.0
offset_bottom = 136.56
tooltip_text = "Line Mode"
toggle_mode = true
icon = ExtResource("4_udib4")

[node name="Top_Right_PANEL" type="Panel" parent="Control_LAYER/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -183.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 71.0
grow_horizontal = 0
theme_override_styles/panel = ExtResource("5_ollqe")

[node name="Logo_LABEL" type="Label" parent="Control_LAYER/Control/Top_Right_PANEL"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -172.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = 32.0
theme_override_font_sizes/font_size = 25
text = "Level Juicer V4.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name_LABEL" type="Label" parent="Control_LAYER/Control/Top_Right_PANEL"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -172.0
offset_top = 41.0
offset_right = -10.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 3

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Level_FILE" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(700, 400)
theme = ExtResource("2_0eg1q")
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="Load_POPUP" type="PopupMenu" parent="."]
title = "Any unsaved changes will be lost! Continue?"
initial_position = 1
size = Vector2i(600, 79)
unresizable = false
borderless = false
content_scale_mode = 1
content_scale_aspect = 4
theme = ExtResource("2_0eg1q")
hide_on_item_selection = false
hide_on_checkable_item_selection = false
item_count = 2
item_0/text = "Yeah!"
item_1/text = "Nah!"
item_1/id = 1

[node name="Game_FILE" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Select World of Goo 2's Executable"
initial_position = 1
size = Vector2i(700, 400)
theme = ExtResource("2_0eg1q")
ok_button_text = "Open"
file_mode = 0
access = 2

[connection signal="pressed" from="Control_LAYER/Control/Save_BUTTON" to="." method="_Save_Pressed"]
[connection signal="pressed" from="Control_LAYER/Control/Load_BUTTON" to="." method="_load_pressed"]
[connection signal="pressed" from="Control_LAYER/Control/Tool_PANEL/Line_BUTTON" to="." method="_line_mode_pressed"]
[connection signal="canceled" from="Level_FILE" to="." method="_file_select_canceled"]
[connection signal="file_selected" from="Level_FILE" to="." method="_Level_Selected"]
[connection signal="index_pressed" from="Load_POPUP" to="." method="_popup_index_pressed"]
[connection signal="canceled" from="Game_FILE" to="." method="_file_select_canceled"]
[connection signal="file_selected" from="Game_FILE" to="." method="_Game_Selected"]
